<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mertref_title"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edittext_merchantRef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/mertref_hint"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="16sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#DDDDDD" />

    </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:id="@+id/layout_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="7"
                    android:text="@string/cart_item_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/cart_item_price"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/cart_item_qty"
                    />
                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:backgroundTint="@color/colorButtonYellow"
                    android:textColor="@color/black"
                    android:minWidth="20dp"
                    android:minHeight="20dp"
                    android:text="@string/cart_edit"
                    android:visibility="invisible"/>
            </LinearLayout>
            <com.bbmsl.payapidemo.ui.components.NonScrollListView
                android:id="@+id/itemList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_total"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_amount_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/currency_hkd"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btnAddListitem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorButtonYellow"
            android:textColor="@color/black"
            android:minWidth="20dp"
            android:minHeight="20dp"
            android:text="@string/cart_add_item" />

    </LinearLayout>

</LinearLayout>
</layout>
