<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/default_bg">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contextClickable="true"
            android:src="@drawable/banner_settings"
       />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layout_webview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:background="@color/activity_bk"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/setting_webview_title"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:text="@string/setting_webview_desc"

                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_clearcookie"
                         android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/colorButtonYellow"
                        android:textColor="@color/black"
                        android:text="@string/setting_webview_btn"

                        android:textSize="12sp"
                        />
                </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>